--- a/ProjetoSimuladorPC.csproj
+++ b/ProjetoSimuladorPC.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -13,7 +13,6 @@
     <Folder Include="Interruptor\" />
     <Folder Include="DMA\" />
     <Folder Include="MMIO\" />
-    <Folder Include="Utilidades\" />
     <Folder Include="timer\" />
     <Folder Include="RAM\" />
   </ItemGroup>
