--- a/ProjetoSimuladorPC.csproj
+++ b/ProjetoSimuladorPC.csproj
@@ -8,10 +8,10 @@
 
   <ItemGroup>
     <Folder Include="Barramento\" />
-    <Folder Include="Cache\" />
     <Folder Include="Interruptor\" />
     <Folder Include="DMA\" />
     <Folder Include="MMIO\" />
+    <Folder Include="UI\" />
     <Folder Include="timer\" />
   </ItemGroup>
 
